# helper_scripts

./: .gitattributes  .gitignore  LICENSE  README.md  build.nix  default.nix  flake.nix  spec.json
dotfiles/: alacritty.nix  any2mp3.nix  applications.nix  atom.nix  atom_ctags-symbols.nix  atom_ctags.nix  autolock.nix  bash.nix  batstatus.nix  bcrypt.nix  bemenu.nix  blackscreen.nix  brightness.nix  caprine.nix  castnow.nix  chrome_cast_allow.nix  clearprimary.nix  coc.nvim.nix  comma.nix  connman.nix  countdown.nix  dbus.nix  dd.nix  default.nix  devenv.nix  dunst.nix  eww.nix  fish.nix  fonts.nix  freecad.nix  ghostty.nix  git-annex-helpers.nix  gitconfig.nix  gitignore.nix  glrnvim.nix  gravatar.nix  helix.nix  httpserver.nix  i3_workspace.nix  i3config.nix  (+90 more)
etc/: .gitconfig  .gitignore  .gvimrc  .i3status.conf  .tmux.conf  .zshrc  supervisord.desktop
home/: dotfiles.nix  misc-gui.nix  misc.nix  niri.nix  nix-index-database.nix  nixmy.nix  wireplumber.nix
homemanager/: flake.nix  matej70.nix
hydras/: packages.nix
installer/: README.md  configuration.nix  disko.sh  flake.nix  luks.nix
matej41/: configuration.nix
nixes/: anti-ddos.nix  ark.nix  astroneer.nix  cinny-desktop.nix  configoption.nix  cproxy.nix  cpu.nix  creality-print.nix  defaultapps.nix  dockers.nix  dotfiles.nix  element-desktop.nix  fvim.nix  gnome-extension-connman.nix  goneovim.nix  graftcp.nix  groovy-language-server.nix  hawaii.nix  jackify.nix  jupyenv.nix  lemminx.nix  logseq.nix  movemaster.nix  (+32 more)
nixes/sway-workspace/: Cargo.toml  default.nix
nixes/sway-workspace/src/: main.rs
(+133 files in other folders)
