[package]
name = "sway-workspace"
version = "0.1.0"
edition = "2021"
authors = ["Matej Cotman <matej@matejc.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde_json = "1.0.91"
